# sergio_rs

./: CITATION.cff  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
sergio_rs/: sergio_rs.pyi
src/: gene.rs  lib.rs  noise.rs  sim.rs
