[package]
name = "sergio"
version = "0.2.1"
edition = "2021"

[lib]
name = "sergio_rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
noisy_float = "0.2.0"
numpy = "0.26.0"
polars = "0.52.0"
pyo3 = { version = "0.26.0" }
pyo3-polars = "0.25.0"
rand_pcg = "0.3.1"

[features]
extension-module = ["pyo3/extension-module"]
